# DINOv3-Strong-Lens-Finder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: gradio_app.py
configs/: default.yaml
docs/: architecture.md  bologna.md  lenscat.md  usage.md
notebooks/: results.ipynb
src/dino_lens_finder/: __init__.py  analysis.py  cli.py  config.py  evaluation.py  report.py  utils.py
src/dino_lens_finder/data/: __init__.py  bologna.py  dataset.py  lenscat.py
src/dino_lens_finder/models/: __init__.py  backbone.py  classifier.py
src/dino_lens_finder/simulation/: __init__.py  lenstronomy_sim.py  toy.py
src/dino_lens_finder/training/: __init__.py  losses.py  metrics.py  trainer.py
tests/: test_pipeline.py
