[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dino-lens-finder"
version = "0.1.0"
description = "Find strong gravitational lenses by fine-tuning a DINOv3 vision backbone."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "timm>=1.0.7",
  "transformers>=4.56",   # DINOv3 support
  "peft>=0.11",
  "numpy>=1.24",
  "scipy>=1.10",
  "pillow>=10.0",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
sim  = ["lenstronomy>=1.11", "astropy>=5.0"]   # physical simulation + Bologna FITS
demo = ["gradio>=4.0"]
notebook = ["matplotlib>=3.6", "jupyter", "nbformat"]
benchmark = ["pandas", "pyarrow", "requests"]   # lenscat catalogue + cutout fetch
dev  = ["pyflakes", "pytest"]

[project.scripts]
dino-lens = "dino_lens_finder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
